--- a/security-ui/src/app/components/login/login.component.css
+++ b/security-ui/src/app/components/login/login.component.css
@@ -1,8 +1,7 @@
 section {
   width: 100%;
   height: 100vh;
-  background-color: #8a2be2;
-  background-size: cover;
+  background-color: #6a5acd;
 }
 
 .container {
@@ -40,7 +39,7 @@ section {
   padding: 10px 20px;
   box-sizing: border-box;
   margin-bottom: 20px;
-  border-radius: 25px;
+  border-radius: 5px;
   outline: none;
   font-size: 14px;
   letter-spacing: 1px;
@@ -53,6 +52,26 @@ section {
   color: #fff;
 }
 
+.login-form button {
+  color: #fff;
+  background: #0072ff;
+  cursor: pointer;
+  margin-bottom: 20px;
+  border-radius: 20px;
+  display: block;
+  width: 100%;
+  padding: 10px 20px;
+  box-sizing: border-box;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  outline: none;
+  font-size: 14px;
+  letter-spacing: 1px;
+  border: none;
+  font-family: "Roboto Condensed", sans-serif;
+  transition: 0.5s;
+}
+
 .login-form input[type="submit"] {
   color: #fff;
   background: #0072ff;
@@ -61,8 +80,9 @@ section {
   cursor: pointer;
 }
 
-.login-form input[type="submit"]:hover {
+.login-form button:hover {
   background: #005aca;
+  transform: translateY(-2px);
 }
 
 .login-form a {
