--- a/security-ui/src/app/components/login/login.component.html
+++ b/security-ui/src/app/components/login/login.component.html
@@ -1,13 +1,15 @@
-<section>
-  <div class="container">
-    <div class="login-form">
-      <h1>Sign in</h1>
-      <form action="">
-        <input type="text" name="" placeholder="Username">
-        <input type="password" name="" placeholder="Password">
-        <input type="submit" name="" value="Login">
-      </form>
-      <a href="">Forget Password</a>
+<form [formGroup]="formGroup" (ngSubmit)="login()">
+  <section>
+    <div class="container">
+      <div class="login-form">
+        <h1>Sign in</h1>
+        <input type="text" formControlName="email" placeholder="Username">
+        <input type="password" formControlName="password" type="password" name="password" placeholder="Password">
+        <button type="submit" [disabled]="!formGroup.valid">Login</button>
+
+        <a href="">Forget Password</a>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
+
+</form>
