--- a/security-ui/src/app/components/login/login.component.html
+++ b/security-ui/src/app/components/login/login.component.html
@@ -7,7 +7,8 @@
         <input type="password" formControlName="password" type="password" name="password" placeholder="Password">
         <button type="submit" [disabled]="!formGroup.valid">Login</button>
 
-        <a href="">Forget Password</a>
+        <a href="">Forget Password</a> <br>
+        <a routerLink="/user">Criar uma conta</a>
       </div>
     </div>
   </section>
