--- a/security-ui/src/app/app.component.html
+++ b/security-ui/src/app/app.component.html
@@ -1,2 +1,10 @@
-<app-nav></app-nav>
-<app-footer></app-footer>
+<div *ngIf="showMenu">
+  <app-nav></app-nav>
+  <app-footer></app-footer>
+
+</div>
+
+
+<div *ngIf="!showMenu">
+  <app-login></app-login>
+</div>
