--- a/security-ui/src/app/components/login/login.component.css
+++ b/security-ui/src/app/components/login/login.component.css
@@ -89,7 +89,7 @@ section {
   text-decoration: none;
   font-size: 16px;
   color: #fff;
-  text-transform: uppercase;
+  text-transform: capitalize;
   transition: 0.5s;
 }
 
