--- a/security-ui/src/app/components/login/login.component.html
+++ b/security-ui/src/app/components/login/login.component.html
@@ -3,10 +3,22 @@
     <div class="container">
       <div class="login-form">
         <h1>Sign in</h1>
-        <input type="text" formControlName="email" placeholder="Username">
-        <input type="password" formControlName="password" type="password" name="password" placeholder="Password">
+        <div class="form-group">
+          <input type="text" formControlName="email" placeholder="Username">
+          <span class="alert alert-danger" role="alert" *ngIf="!formGroup.get('email')?.valid && formGroup.get('email')?.touched">
+            Please provide a valid email
+          </span>
+        </div>
+        <div class="form-group">
+          <input type="password" formControlName="password" type="password" name="password" placeholder="Password">
+          <span class="alert alert-danger" role="alert" *ngIf="!formGroup.get('password')?.valid && formGroup.get('password')?.touched">
+            Please provide a valid password
+          </span>
+        </div>
         <button type="submit" [disabled]="!formGroup.valid">Login</button>
-
+        <div class="login-failed" *ngIf='this.isError'>
+          <p class="login-failed-text">Login Failed. Please check your credentials and try again.</p>
+        </div>
         <a href="">Forget Password</a> <br>
         <a routerLink="/user">Criar uma conta</a>
       </div>
