--- a/security-ui/src/app/components/login/login.component.css
+++ b/security-ui/src/app/components/login/login.component.css
@@ -1,126 +1,64 @@
-section {
-  width: 100%;
-  height: 100vh;
-  background-color: #6a5acd;
-}
-
-.container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 340px;
-  text-align: center;
-}
-
-.login-form {
-  position: relative;
-  box-sizing: border-box;
-  padding: 60px 30px;
-  transition: 0.5s;
-}
-
-.login-form:hover {
-  background: rgba(255, 255, 255, 0.1);
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-  border-radius: 10px;
-}
-
-.login-form h1 {
-  margin: 0 0 20px;
-  color: #fff;
-  font-size: 30px;
-  text-transform: uppercase;
-}
-
-.login-form input {
-  display: block;
-  width: 100%;
-  padding: 10px 20px;
-  box-sizing: border-box;
-  margin-bottom: 20px;
-  border-radius: 5px;
-  outline: none;
-  font-size: 14px;
-  letter-spacing: 1px;
-  border: none;
-  background: rgba(255, 255, 255, 0.1);
-  font-family: "Roboto Condensed", sans-serif;
-  margin-bottom: 5px;
-  margin-top: 5px;
-}
-
-.login-form input::placeholder {
-  color: #fff;
-}
-
-.login-form button {
-  color: #fff;
-  background: #0072ff;
-  cursor: pointer;
-  margin-bottom: 20px;
+#form-container {
+  background-color: #fff;
   border-radius: 20px;
-  display: block;
-  width: 100%;
-  padding: 10px 20px;
-  box-sizing: border-box;
-  margin-bottom: 20px;
-  border-radius: 5px;
-  outline: none;
-  font-size: 14px;
-  letter-spacing: 1px;
-  border: none;
-  font-family: "Roboto Condensed", sans-serif;
-  transition: 0.5s;
-  margin-top: 5px;
+  box-shadow: 0.5px 10px 15px rgba(0, 0, 0, 0.2);
+  margin: 25px auto;
+  padding: 25px;
 }
 
-.login-form input[type="submit"] {
-  color: #fff;
-  background: #0072ff;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
+#form-container h2 {
+  font-weight: 900;
+  margin-bottom: 30px;
 }
 
-.login-form button:hover {
-  background: #005aca;
-  transform: translateY(-2px);
-}
-
-.login-form a {
-  text-decoration: none;
-  font-size: 16px;
-  color: #fff;
-  text-transform: capitalize;
+#form-container a {
+  color: #222;
   transition: 0.5s;
 }
 
-.login-form a:hover {
-  color: rgb(230, 225, 225);
-  background: #0072ff;
-  padding: 5px 10px;
-  transform: translateY(-2px);
-  border-radius: 5px;
+#form-container a:hover {
+  color: #6c63ff;
 }
-.login-failed {
+
+#form-container form {
+  padding-bottom: 50px;
+}
+
+#form-container .form-control {
+  border: none;
+  border-bottom: 1px solid #ccc;
+  border-radius: 0;
+}
+
+#form-container .form-control:focus {
+  box-shadow: none;
+}
+
+#form-container .form-floating label {
+  color: #ccc;
+}
+
+#form-container .form-floating > .form-control:focus ~ label {
+  color: #222;
+}
+
+#form-container input[type="submit"] {
+  background-color: #6c63ff;
+  border-color: #6c63ff;
+}
+
+.row.align-items-center {
+  align-content: center;
+  height: 100%;
+  padding: 75px 0;
+}
+
+#link-container {
   text-align: center;
-  margin: auto;
-  margin-top: 10px;
-  border: 2px solid black;
-  width: 65%;
-  border-radius: 5px;
-  background-color: red;
+  padding-top: 50px;
 }
 
+.alert-custom,
 .login-failed-text {
-  text-align: center;
-  margin-top: 5px;
-  font-weight: bold;
-  color: aliceblue;
-  font-size: 10px;
-}
-
-.alert {
-  padding: 0 10px;
+  color: red;
 }
