--- a/security-ui/src/app/components/login/login.component.html
+++ b/security-ui/src/app/components/login/login.component.html
@@ -1,6 +1,8 @@
-<form [formGroup]="formGroup" (ngSubmit)="login()">
+<!--<form [formGroup]="formGroup" (ngSubmit)="login()">
   <section>
-    <div class="container">
+
+
+      <div class="container">
       <div class="login-form">
         <h1>Sign in</h1>
         <div class="form-group">
@@ -23,6 +25,45 @@
         <a routerLink="/user">Criar uma conta</a>
       </div>
     </div>
+
   </section>
 
 </form>
+
+-->
+
+<div class="container col-11 col-md-9" id="form-container">
+  <div class="row align-items-center gx-5">
+    <div class="col-md-6 order-md-2">
+      <h2>Faça login para continuar</h2>
+      <form [formGroup]="formGroup" (ngSubmit)="login()">
+        <div class="form-floating mb-3">
+          <input type="text" class="form-control" id="email" formControlName="email">
+          <label for="email" class="form-label">Digite o seu e-mail</label>
+          <span class="alert-custom alert-danger" role="alert" *ngIf="!formGroup.get('email')?.valid && formGroup.get('email')?.touched">
+            Entre com um e-mail válido.
+          </span>
+        </div>
+        <div class="form-floating mb-3">
+          <input type="text" class="form-control" id="password" formControlName="password">
+          <label for="password" class="form-label">Digite a sua senha</label>
+          <span class="alert-custom alert-danger" role="alert" *ngIf="!formGroup.get('password')?.valid && formGroup.get('password')?.touched">
+            Entre uma senha válida.
+          </span>
+        </div>
+        <div class="login-failed" *ngIf='this.isError'>
+          <p class="login-failed-text">E-mail/senha inválidos. Tente novamente.</p>
+        </div>
+        <input type="submit" class="btn btn-primary" value="Entrar">
+      </form>
+    </div>
+    <div class="col-md-6 order-md-1">
+      <div class="col-12">
+        <img [src]="signIn" alt="entra no sistema" class="img-fluid">
+      </div>
+      <div class="col-12" id="link-container">
+        <a routerLink="/user">Ainda não tenho cadastro</a>
+      </div>
+    </div>
+  </div>
+</div>
