--- a/security-ui/src/app/components/user/user.component.css
+++ b/security-ui/src/app/components/user/user.component.css
@@ -1,8 +1,87 @@
+#form-container {
+  background-color: #fff;
+  border-radius: 20px;
+  box-shadow: 0.5px 10px 15px rgba(0, 0, 0, 0.2);
+  margin: 25px auto;
+  padding: 25px;
+}
+
+#form-container h2 {
+  font-weight: 900;
+  margin-bottom: 30px;
+}
+
+#form-container a {
+  color: #222;
+  transition: 0.5s;
+}
+
+#form-container a:hover {
+  color: #6c63ff;
+}
+#form-container .form-control {
+  border: none;
+  border-bottom: 1px solid #ccc;
+  border-radius: 0;
+}
+
+#form-container .form-control:focus {
+  box-shadow: none;
+}
+
+#form-container .form-floating label {
+  color: #ccc;
+}
+
+#form-container .form-floating > .form-control:focus ~ label {
+  color: #222;
+}
+
+#form-container form {
+  padding-bottom: 50px;
+}
+
+#form-container input[type="submit"] {
+  background-color: #6c63ff;
+  border-color: #6c63ff;
+}
+
+.btn.btn-primary {
+  width: 100%;
+}
+
+@media (min-width: 768px) {
+  .btn.btn-primary {
+    width: auto;
+  }
+}
+
+.col-md-6.order-md-1 {
+  padding-top: 50px;
+}
+
+.row.align-items-center {
+  align-content: center;
+  height: 100%;
+  padding: 75px 0;
+}
+
+#link-container {
+  text-align: center;
+  padding-top: 50px;
+}
+
+@media (min-width: 768px) {
+  #form-container {
+    margin: 50px auto;
+    padding: 40px;
+  }
+}
+
 .btn {
   margin-top: 10px;
 }
 
-.alert {
-  padding: 0 10px;
-  top: 1px;
+.alert-custom {
+  color: red;
 }
